# AetherML

./: LICENSE  README.md  cookiecutter.json  flake.nix
{{cookiecutter.project_name}}/: .gitignore  dockerfile  justfile  pyproject.toml
{{cookiecutter.project_name}}/src/data/: extract.py  load.py  main.py  transform.py
