[project]
name = "example"
# name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.62.0",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "prefect>=3.4.14",
    "seaborn>=0.13.2",
]
